--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "redis": "^3.0.2",
-    "socket.io": "^1.7.4"
+    "socket.io": "^4.0.1"
   }
 }
